# SR_project

./: README.md
AI_customer_assistant/: Justfile  config.json  config_loader.py  core.py  gui.py  logging_client.py  logging_server.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
AI_customer_assistant/config/: config.toml  config.yaml
AI_customer_assistant/docs/: architecture.md  experience.md  functionalities.md  index.md
AI_customer_assistant/services/: audio_preprocessing.py  basic_categorization.py  compliance.py  pii_check.py  profanity_check.py  sentimental_analysis.py  speaking_speed.py  speech_diarization.py  transcription.py  utils.py
